--- a/Completed/02-Float/02-float-stacking-order.html
+++ b/Completed/02-Float/02-float-stacking-order.html
@@ -26,11 +26,9 @@
       p:nth-of-type(4) {
         clear: left;
       }
-	  div.clearfix:after{
-		  content: "" ;
-		  display:block;
-		  clear:both; 
-	  }
+      div.clearfix {
+        display: flow-root;
+      }
     </style>
   </head>
   <body>
@@ -60,8 +58,7 @@
         Solid rubber tires and the long spokes of the large front wheel provided
         a much smoother ride than its predecessor.
       </p>
-	  <!-- <div></div> -->
+      <!-- <div></div> -->
     </div>
-    
   </body>
 </html>
